src/objects/SFCCLtngPtr__SFDC_MDF_Claim__c.object
<CustomObject>
    <description>A set of claims tied to a specific fund request.</description>
    <fields>
        <fullName>SFCCLtngPtr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account that made the claim request. Typically updated via a scontrol or APEX code rather than having the partner select their own account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDKEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Age_Days__c</fullName>
        <description>The number of elapsed days since the claim was created</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Amount__c</fullName>
        <description>The amount of the current claim</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Approved_Date__c</fullName>
        <description>The date the fund claim was approved. This should be updated through a workflow approval process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger budget recalculate workflow</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally assign the fund claim to a budget. This budget is typically the same budget as the fund request is assigned to</description>
        <label>Budget</label>
        <referenceTo>SFCCLtngPtr__SFDC_Budget__c</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDZEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Claim_Details__c</fullName>
        <description>High level information about the fund claim</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Claim_ID__c</fullName>
        <description>A unique id assigned to the fund claim. Optionally useful for the partner as a means to identify the specific fund claim record.</description>
        <displayFormat>{YY}{MM}{DD}-{0}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Claim_Paid_Date__c</fullName>
        <description>Claim paid date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Expenditure_Type__c</fullName>
        <description>A list of available activity/ expenditure types. Customize as needed</description>
        <label>Expenditure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Conference Fees</fullName>
                </value>
                <value>
                    <fullName>List Rental</fullName>
                </value>
                <value>
                    <fullName>Printing Charges</fullName>
                </value>
                <value>
                    <fullName>Promotional Goods</fullName>
                </value>
                <value>
                    <fullName>Telemarketing Services</fullName>
                </value>
                <value>
                    <fullName>Training Costs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Fund_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note: This cannot be a master detail relationship if you plan to use approval workflow as the fund request will be locked (during approval and most likely post approval) and therefore any child claims cannot be saved</description>
        <label>Fund Request</label>
        <referenceTo>SFCCLtngPtr__SFDC_MDF__c</referenceTo>
        <relationshipLabel>Fund Claims</relationshipLabel>
        <relationshipName>R00N30000002DjDcEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Other_Expenditure_Type__c</fullName>
        <description>Used when the user chooses &apos;other&apos; as the expenditure type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Expenditure Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Paid_Check_Number__c</fullName>
        <description>Check number used to pay claim.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that owns the partner account. Should be updated/ set automatically by an APEX trigger or scontrol rather than entered by the user</description>
        <label>Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002DjDeEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Payment_Method__c</fullName>
        <description>How the claim payment was paid/ processed</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Performance_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the partner or the vendor (depending on the field level security and implementation specifics) to indicate that the claim has supporting documentation</description>
        <label>Performance Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Performance_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proof of performance verified by the vendor.</description>
        <label>Performance Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Status__c</fullName>
        <description>The fund claim approval status. This should be updated through an approval process rather than changing through the user interface</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fund Claim</label>
    <listViews>
        <fullName>SFCCLtngPtr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SFCCLtngPtr__Amount_Limits</fullName>
        <active>true</active>
        <description>The amount must be greater than zero</description>
        <errorConditionFormula>SFCCLtngPtr__Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>SFCCLtngPtr__Amount__c</errorDisplayField>
        <errorMessage>The claim amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFCCLtngPtr__Require_Other_Expenditure_Type</fullName>
        <active>true</active>
        <description>Used to force the user to choose fill in the &apos;other expenditure type&apos; when &apos;other&apos; is chosen as the expenditure type</description>
        <errorConditionFormula>AND(ISPICKVAL( SFCCLtngPtr__Expenditure_Type__c, &quot;Other&quot;), LEN(SFCCLtngPtr__Other_Expenditure_Type__c )=0)</errorConditionFormula>
        <errorDisplayField>SFCCLtngPtr__Other_Expenditure_Type__c</errorDisplayField>
        <errorMessage>Please provide details on the &apos;Other&apos; expenditure type.</errorMessage>
    </validationRules>
</CustomObject>